Adding API swagger doc for FaqAPIController,
